generate final sudoku

--- a/shudu/shudu.vcxproj.filters
+++ b/shudu/shudu.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="generate.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="common.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
