--- a/shudu/shudu.vcxproj
+++ b/shudu/shudu.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="shudu.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="common.h" />
     <ClInclude Include="generate.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
