success read in file

--- a/shudu/shudu.vcxproj.filters
+++ b/shudu/shudu.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="generate.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="solve.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="generate.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="common.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="solve.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
