--- a/shudu/shudu.vcxproj
+++ b/shudu/shudu.vcxproj
@@ -141,10 +141,12 @@
   <ItemGroup>
     <ClCompile Include="generate.cpp" />
     <ClCompile Include="shudu.cpp" />
+    <ClCompile Include="solve.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h" />
     <ClInclude Include="generate.h" />
+    <ClInclude Include="solve.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
